[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Axelrod"
dynamic = ["version"]
description = "Reproduce the Axelrod iterated prisoners dilemma tournament"
readme = "README.rst"
license = {file = "LICENSE.txt"}
requires-python = ">=3.6"
authors = [
    { name = "Vince Knight", email = "axelrod-python@googlegroups.com" },
    { name = "Owen Campbell" },
    { name = "Karol Langner" },
    { name = "Marc Harper" },
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "cloudpickle>=0.2.2",
    "dask[dataframe]>=2.9.2",
    "fsspec>=0.6.0",
    "matplotlib>=3.0.3",
    "numpy>=1.17.4",
    "pandas>=1.0.0",
    "pyyaml>=5.1",
    "scipy>=1.3.3",
    "toolz>=0.8.2",
    "tqdm>=4.39.0",
]

[project.optional-dependencies]
development = [
    "hypothesis==5.19.3",
]
human = [
    "prompt-toolkit>=3.0",
]

[project.urls]
Homepage = "http://axelrod.readthedocs.org/"

[tool.hatch.version]
path = "axelrod/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "axelrod",
]
